Fix content on page inheriting center text alignment

--- a/src/app/twig-preview/twig-preview.component.css
+++ b/src/app/twig-preview/twig-preview.component.css
@@ -13,6 +13,7 @@
   position: relative;
   width: 100%;
   height: calc(297mm - 111px);
+  text-align: initial;
 }
 
 @media screen and (min-width: 1100px) {
